--- a/debian/cloud-init-debian.cfg
+++ b/debian/cloud-init-debian.cfg
@@ -15,3 +15,10 @@ runcmd:
   - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable"
   - apt update
   - apt -y install docker-ce docker-ce-cli containerd.io
+  - mkdir -p /etc/systemd/system/docker.service.d
+  - |
+    echo "[Service]
+    ExecStart=
+    ExecStart=/usr/bin/dockerd -H fd:// -H tcp://0.0.0.0:2376" >> /etc/systemd/system/docker.service.d/override.conf
+  - systemctl daemon-reload
+  - systemctl restart docker.service
