Docker daemon protected with (dummy) signed certificates

--- a/debian/cloud-init-docker.cfg
+++ b/debian/cloud-init-docker.cfg
@@ -15,10 +15,29 @@ runcmd:
   - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable"
   - apt update
   - apt -y install docker-ce docker-ce-cli containerd.io
+  - systemctl restart haveged
+  - mkdir -p /root/docker
+  - export EXTERNAL_IP=`curl ifconfig.me`
+  - export HOST=`hostname`
+  - export RANDFILE=/tmp/.rnd
+  - head /dev/urandom | tr -dc A-Za-z0-9 | head -c 13 >> /root/docker/pass
+  - openssl genrsa -aes256 -out /root/docker/ca-key.pem -passout file:/root/docker/pass 4096
+  - openssl req -new -x509 -days 365 -key /root/docker/ca-key.pem -sha256 -out /root/docker/ca.pem -passin file:/root/docker/pass -subj "/C=NL/O=ninckblokje/CN=$HOST"
+  - openssl genrsa -out /root/docker/server-key.pem 4096
+  - openssl req -subj "/CN=$HOST" -sha256 -new -key /root/docker/server-key.pem -out /root/docker/server.csr
+  - echo subjectAltName = DNS:$HOST,IP:$EXTERNAL_IP,IP:127.0.0.1 >> /root/docker/extfile.cnf
+  - echo extendedKeyUsage = serverAuth >> /root/docker/extfile.cnf
+  - openssl x509 -passin file:/root/docker/pass -req -days 365 -sha256 -in /root/docker/server.csr -CA /root/docker/ca.pem -CAkey /root/docker/ca-key.pem -CAcreateserial -out /root/docker/server-cert.pem -extfile /root/docker/extfile.cnf
+  - openssl genrsa -out /root/docker/key.pem 4096
+  - openssl req -subj '/CN=client' -new -key /root/docker/key.pem -out /root/docker/client.csr
+  - echo extendedKeyUsage = clientAuth > /root/docker/extfile-client.cnf
+  - openssl x509 -passin file:/root/docker/pass -req -days 365 -sha256 -in /root/docker/client.csr -CA /root/docker/ca.pem -CAkey /root/docker/ca-key.pem -CAcreateserial -out /root/docker/cert.pem -extfile /root/docker/extfile-client.cnf
+  - chmod 600 /root/docker/*
+  - rm /tmp/.rnd
   - mkdir -p /etc/systemd/system/docker.service.d
   - |
     echo "[Service]
     ExecStart=
-    ExecStart=/usr/bin/dockerd -H fd:// -H tcp://0.0.0.0:2376" >> /etc/systemd/system/docker.service.d/override.conf
+    ExecStart=/usr/bin/dockerd --tlsverify --tlscacert=/root/docker/ca.pem --tlscert=/root/docker/server-cert.pem --tlskey=/root/docker/server-key.pem -H fd:// -H tcp://0.0.0.0:2376" >> /etc/systemd/system/docker.service.d/override.conf
   - systemctl daemon-reload
   - systemctl restart docker.service
